# webrtc-client-native

./: BUILD.gn  README.md  webrtc.gni
api/: create_peerconnection_factory.cc
api/audio/: BUILD.gn
api/audio_codecs/: BUILD.gn  builtin_audio_decoder_factory.cc  builtin_audio_encoder_factory.cc
api/audio_codecs/opus/: BUILD.gn
api/video/: BUILD.gn  builtin_video_bitrate_allocator_factory.cc
api/video_codecs/: BUILD.gn
args/: android_arm.gn  android_arm64.gn  ios32.gn  ios64.gn
audio/: BUILD.gn  audio_receive_stream.cc
call/: BUILD.gn  call.cc  call.h  degraded_call.cc  degraded_call.h  rtp_transport_controller_send.cc
media/: BUILD.gn
media/base/: codec.cc  media_channel.h
media/engine/: internal_decoder_factory.cc  internal_encoder_factory.cc  webrtc_media_engine.cc  webrtc_media_engine.h  webrtc_video_engine.cc  webrtc_video_engine.h  webrtc_voice_engine.cc  webrtc_voice_engine.h
modules/audio_coding/: BUILD.gn
modules/audio_processing/: BUILD.gn  audio_processing_impl.cc  audio_processing_impl.h
modules/audio_processing/aec/: BUILD.gn
modules/audio_processing/aec3/: BUILD.gn
modules/audio_processing/aecm/: BUILD.gn
modules/rtp_rtcp/: BUILD.gn
modules/rtp_rtcp/source/: rtp_format.cc
modules/video_coding/: BUILD.gn  encoded_frame.cc  packet_buffer.cc  session_info.cc  video_codec_initializer.cc
pc/: BUILD.gn  stats_collector.cc  track_media_info_map.cc
sdk/: BUILD.gn
sdk/android/: BUILD.gn
stats/: BUILD.gn
test/: BUILD.gn
video/: BUILD.gn  video_analyzer.cc  video_receive_stream.cc  video_stream_encoder.cc
(+10 files in other folders)
