is_debug = false
rtc_include_tests = false
rtc_enable_protobuf = false
rtc_enable_sctp = false
rtc_libvpx_build_vp9 = false
rtc_build_libvpx = false
rtc_build_encoder = false
rtc_build_builtin_codec = false
rtc_build_sendstream = false
rtc_build_stats = true
rtc_build_ap = false
rtc_use_h264 = false
rtc_build_examples = false
rtc_build_tools = false
rtc_include_builtin_audio_codecs = true
rtc_include_builtin_video_codecs = true
rtc_include_internal_audio_device = true
rtc_include_ilbc = false
rtc_builtin_ssl_root_certificates = false
rtc_build_json = false
target_os = "android"
target_cpu = "arm64"
