is_debug = false
rtc_include_tests = false
rtc_enable_protobuf = false
rtc_enable_sctp = false
rtc_libvpx_build_vp9 = false
rtc_build_libvpx = true
rtc_build_encoder = true
rtc_build_builtin_codec = false
rtc_build_sendstream = false
rtc_build_stats = true
rtc_build_ap = false
rtc_use_h264 = false
rtc_build_examples = true
rtc_build_tools = false
rtc_include_builtin_audio_codecs = false
rtc_include_builtin_video_codecs = false
rtc_include_internal_audio_device = false
rtc_include_ilbc = false
rtc_builtin_ssl_root_certificates = false
rtc_build_json = false
target_os = "ios"
target_cpu = "arm64"
